Fixed glitches in z-index of select dropdown and image title

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -116,7 +116,8 @@ body {
   height: 50px;
   width: 100%;
   opacity: 0;
-  z-index: 0;
+  z-index: 1;
+  pointer-events: none;
   background: linear-gradient(to top, transparent 0%, rgba(0,0,0,0.6) 100%);
 // Safari 3.1 to 6.0
   -webkit-transition-property: opacity;
@@ -139,7 +140,7 @@ body {
   top: 0px;
   right: -50%;
   transform: translateY(50%);
-  z-index: -1;
+  // z-index: -1;
 }
 
 .showTitle {
@@ -420,7 +421,7 @@ body {
   position: absolute;
   top: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
   -webkit-overflow-scrolling: touch;
 }
 .Select-menu {
